# data-sync

./: .gitignore  Dockerfile  Dockerfile.live  Dockerfile.test  README.md  build_cloud_tester.sh  deploy.sh  docker-compose.yaml  entrypoint.sh  generate_certs.ps1  live_test.py  load_generator.py  pyproject.toml
config/: config.yaml  mosquitto.config
deployment/: Dockerfile  Dockerfile.dep  PRODUCTION-HANDOVER.md  acl.conf  emqx.conf  entrypoint.sh  railway.json  run.ps1  tunables.env
scripts/: download_jars.ps1  init_mysql_source.sql  init_postgres_source.sql  setup.ps1
src/: __init.py
src/sensor_sync/: __init__.py  main.py
src/sensor_sync/config/: settings.py
src/sensor_sync/core/: change_detector.py  dead_letter_queue.py  debezium_engine.py  event_processor.py  state_manager.py
src/sensor_sync/database/: connector.py  mysql_connector.py  schema_manager.py
src/sensor_sync/mqtt/: emqx_publisher.py  emqx_subscriber.py  publisher.py  subscriber.py
src/sensor_sync/utils/: crypto.py  logger.py  metrics.py
