[tool.poetry]
name = "sensor-sync"
version = "2.0.0"
description = "Pure MQTT-based real-time data synchronization system"
authors = ["dev"]

[tool.poetry.dependencies]
python = "^3.11"
paho-mqtt = "^1.6.1"
psycopg2-binary = "^2.9.9"
pymongo = "^4.6.0"
mysql-connector-python = "^8.2.0"
pyyaml = "^6.0"
python-dotenv = "^1.0.0"
cryptography = "^41.0.7"
prometheus-client = "^0.19.0"
structlog = "^23.2.0"
python-json-logger = "^2.0.7"
tenacity = "^8.2.3"
redis = "^5.0.1"
dotenv = "^0.9.9"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"